{{$NEXT}}

- The 2.60 release would throw an exception if the logged message was
  empty. While this makes sense, it also breaks backwards compatibility, so it
  has been reverted. Reported by Greg Oschwald. GitHub #38.


2.60     2017-02-12

- Same as 2.59 ... Switched from Params::Validate to
  Params::ValidationCompiler. This should speed up constructors and logging a
  little bit. This also allows Log::Dispatch::File to accept things like
  Path::Tiny objects for filenames. Reported by Joel Berger. GitHub #36.


2.59     2017-02-05 (TRIAL RELEASE)

- Switched from Params::Validate to Params::ValidationCompiler. This should
  speed up constructors and logging a little bit. This also allows
  Log::Dispatch::File to accept things like Path::Tiny objects for
  filenames. Reported by Joel Berger. GitHub #36.


2.58     2016-11-13

- Switched from RT to the GitHub issue tracker.


2.57     2016-08-13

- Added a remove_callback method to the main Log::Dispatch object as well as
  all outputs. Patch by Doug Bell. GitHub #22.


2.56     2016-05-06

- Cleaned up some cruft in Pod. Some sections ended up in there twice.


2.55     2016-05-06

- The values of $@, $!, and $? are protected in various cases where they could
  end up being changed by logging code. Patch by Salvador Fandiño. GitHub #18.

- Treat MSYS2 like Cygwin in tests. Fix by Graham Ollis. GitHub #19.


2.54     2016-01-18

- Fixed File::Locked even more. While some deadlocks were eliminated, there
  was still an issue when a Log::Dispatch object was created in a parent
  process and then recreated in the children. If the close_after_write
  parameter was false, then there would be a deadlock.

- Made Syslog work on a threaded Perl when the threads module was not
  explicitly loaded. Fixed by Konrad Bucheli. GitHub #13.

- The log() method now accepts a level parameter as an integer. Fixed by Steve
  Bertrand. GitHub #15.


2.53     2016-01-14

- Actually fix File::Locked, this time with some actual tests.
