@@ -4,6 +4,10 @@
   empty. While this makes sense, it also breaks backwards compatibility, so it
   has been reverted. Reported by Greg Oschwald. GitHub #38.
 
+- The 2.60 release would throw an exception if you tried to create a Syslog
+  output where the ident was an empty string. Reported by Greg
+  Oschwald. GitHub #38.
+
 
 2.60     2017-02-12
 
